# Academic-Analyzer

./: app.py  main.py  pyproject.toml  requirements.txt
agents/: answers_analyser.py  answers_extractor.py  open_router_agent.py
notebooks/: work.ipynb
prompts/: answer_extractor.txt  answers_analysis.txt
